# ml-helper

./: .gitignore  Classification.ipynb  README.md  Regression.ipynb  helper.py  helpers.py  license.txt  setup.cfg
.ipynb_checkpoints/: Regression-checkpoint.ipynb  Regression_with_plots.ipynb
examples/: Classification.ipynb  Regression.ipynb
src/ml_helper/: __init__.py  helper.py
