[metadata]
name = ml-helper
author = akoury
version = 0.0.13
summary = A few helpers for working with machine learning projects
description-file = 
    README.md
home-page = https://github.com/althonos/akoury/ml-helper/
license = MIT
license-file = license.txt

[options]
install_requires =
    numpy >= 1.16
    pandas >= 0.24
    seaborn >= 0.9
    scikit-learn >= 0.20
    matplotlib >= 3
    scipy >= 1
    imblearn >= 0
    vecstack >= 0

package_dir=
    =src
packages=find:

[options.packages.find]
where=src
