[metadata]
name = ml-helper
author = akoury
version = 0.0.23
summary = Helpers to speed up and structure machine learning projects
description-file = 
    README.md
home-page = https://github.com/akoury/ml-helper
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
license-file = license.txt

[options]
install_requires =
    numpy >= 1.16
    pandas >= 0.23.4
    seaborn >= 0.9
    scikit-learn >= 0.20
    matplotlib >= 3
    scipy >= 1
    imblearn >= 0
    vecstack >= 0

package_dir=
    =src
packages=find:

[options.packages.find]
where=src
